--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,11 @@
       // "settings.gradle",
       // "build.gradle"
     ]
-  }
+  },
+  "java.configuration.runtimes": [
+    {
+      "name": "JavaSE-1.8",
+      "path": "/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home"
+    }
+  ]
 }
