search ignore files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
+  "search.useIgnoreFiles": true,
   "triggerTaskOnSave.tasks": {
     "dev.reload": [
       "src/**/*.java" // <-- Glob pattern to specify which files should trigger the task
