--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-import org.gradle.api.tasks.Input
-import org.gradle.api.tasks.Optional
-
 plugins {
     id 'java'
 }
@@ -36,8 +33,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.7.0')
 
     //local file
-    implementation files('/Users/arturmoczulski/Projects/atavism-server-docker/atavism_server/dist/lib/atavism.jar')
-
+    implementation files("$rootDir/atavism_server/dist/lib/atavism.jar")
 }
 
 //   ____        _ _     _ 
@@ -50,7 +46,7 @@ sourceSets {
     main {
         java {
             // Include all the plugins
-            file('src/plugins').listFiles().each { File file ->
+            file("$rootDir/src/plugins").listFiles().each { File file ->
                 if (file.isDirectory()) {
                     def pluginSrcDir = "${file.path}/src"
                     if (new File(pluginSrcDir).exists()) {
@@ -166,6 +162,13 @@ def dockerCompose(String action, String composeFile, List<String> additionalArgs
     }
 }
 
+//    ____          _                                        _   _             
+//   / ___|___   __| | ___    __ _  ___ _ __   ___ _ __ __ _| |_(_) ___  _ __  
+//  | |   / _ \ / _` |/ _ \  / _` |/ _ \ '_ \ / _ \ '__/ _` | __| |/ _ \| '_ \ 
+//  | |__| (_) | (_| |  __/ | (_| |  __/ | | |  __/ | | (_| | |_| | (_) | | | |
+//   \____\___/ \__,_|\___|  \__, |\___|_| |_|\___|_|  \__,_|\__|_|\___/|_| |_|
+//                           |___/                                             
+task registerPluginsMessages(type : RegisterPluginsMessagesTask)
 //   _____         _       
 //  |_   _|__  ___| |_ ___ 
 //    | |/ _ \/ __| __/ __|
