message registration gens wip

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
       "name": "JavaSE-1.8",
       "path": "/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home"
     }
-  ]
+  ],
+  "[java]": {
+    "editor.defaultFormatter": "redhat.java"
+  }
 }
