add gen methods to the build

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,10 @@ jar {
 
 build {
     dependsOn jar
+    dependsOn 'registerPlugins'
+    dependsOn 'registerPluginsMessages'
+    dependsOn 'setPluginsProperties'
+    dependsOn 'genertateWorldSh'
 }
 
 //   ____                 _                                  _   
